--- a/src/screens/Color.scss
+++ b/src/screens/Color.scss
@@ -16,7 +16,8 @@
   background: rgba(0, 0, 0, 0.5);
   border-radius: 8px;
   color: #fff;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   min-width: 80px;
   padding: 2em;
   text-align: center;
